@@ -175,24 +175,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>${project.encoding}</encoding>
-                    <compilerArgument>
-                        --add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED,hanlp
-                    </compilerArgument>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-                <version>2.15.2</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>compile</goal>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
